# VoidRaven-AI-thinkeners-Hackathon

./: .gitignore  README.md  paris_Bschool_Applicant_CV.json
fastapi-backend/: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
fastapi-backend/alembic/: env.py
fastapi-backend/alembic/versions/: 001_initial_tables.py  155727c9e3cd_merge_heads.py  71f2f0eeee59_add_evaluation_column_to_interview_table.py  ae0529d68a8d_update_tables.py
fastapi-backend/app/: main.py
fastapi-backend/app/api/v1/: api.py
fastapi-backend/app/api/v1/endpoints/: audio_analysis.py  candidates.py  resume_analysis.py  transcript_analysis.py
fastapi-backend/app/core/: config.py  database.py
fastapi-backend/app/models/: __init__.py  analysis.py  base.py  candidate.py  interview.py  question.py  resume.py
fastapi-backend/app/schemas/: __init__.py  candidate.py  interview.py  question.py
fastapi-backend/app/services/audio_analysis/: audio_agent.py
fastapi-backend/app/services/resume_analysis/: resume_agent.py
fastapi-backend/app/services/sentiment_analyzer/: ai_user_qa_pairs.json  sentiment_analyzer.py
fastapi-backend/app/services/sentiment_analyzer_v2/: sentiment_analyzer.py
fastapi-backend/app/services/transcript_analysis/: transcript_agent.py
fastapi-backend/app/util/llm/: claude.py
fastapi-backend/app/utils/llm/: anthropic.py
fastapi-backend/scripts/: add_example_cv.py  create_test_db.py  drop_tables.py  init_db.py  run_migrations.py  setup.sh
fastapi-backend/tests/: README.md  TEST_PLAN.md  conftest.py  test_api.py  test_database.py  utils.py
front/: package-lock.json  package.json
front/src/: App.js  App.jsx  index.js
front/src/config/: PrivateRoutesConfig.jsx  PublicRoutesConfig.jsx  Roles.jsx  index.jsx
front/src/pages/: Homepage.jsx  Interview.jsx  Login.jsx  PublicDashboard.css  PublicDashboard.jsx  index.jsx
front/src/routes/: Auth.jsx  MapAllowedRoutes.jsx  PrivateRoutes.jsx  PublicRoutes.jsx  ScrollToTop.jsx  ScrollToTopHelperButton.jsx  TabTitle.jsx  index.jsx
front/src/session-utils/: UserSession.jsx  index.jsx  logout.jsx
front/src/utils/: config.jsx
frontend/: Dockerfile
(+6 files in other folders)
