[project]
name = "fastapi-backend"
version = "0.1.0"
description = "AI-powered university admissions interview platform"
readme = "README.md"
requires-python = ">=3.8, <4.0"
license = {text = "MIT"}
authors = [
    { name = "VoidRaven Team", email = "team@voidraven.com" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.6",
    "anthropic>=0.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
